Cleaning up the code and added select.

--- a/src/test/resources/selenium2.html
+++ b/src/test/resources/selenium2.html
@@ -8,7 +8,7 @@
         <script type="text/javascript" src="selenium2.js"> </script>
     </head>
     <body>
-        <h1>Learning Selenium (part 2)</h1>
+        <h1>Learning Selenium</h1>
         <div id="form-example" class="example">
             <h2>Users</h2>
             <div id="filter-by-role">Show only users with role:<br />
