Cleaning up the code and added select.

--- a/src/test/resources/selenium2.html
+++ b/src/test/resources/selenium2.html
@@ -4,7 +4,7 @@
         <title>Learning Selenium</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" type="text/css" href="style.css" />
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"> </script>
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"> </script>
         <script type="text/javascript" src="selenium2.js"> </script>
     </head>
     <body>
